--- a/app/index.html
+++ b/app/index.html
@@ -2,16 +2,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="css/main-edx.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="main">
-        <div class="vert-mod">
-<div class="imperial-activity">
-    <div id="boilerplate"></div>
-</div>
-</div>
-</div>
-<script src="boilerplate.js"> </script>
+    <header><h1>Your Local Shop... Online!</h1></header>
+    <div id="shop"></div>
+    <footer><h1>Available worldwide... local to you.</h1><p><a href="mailto:kerrianneellis@gmail.com"/>Contact us</a></p></footer>
+<script src="shop.js"> </script>
 </body>
 </html>
