--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header><h1>Your Local Shop... Online!</h1></header>
+    <header><div class="logo">Globalocal</div><h1>Your Local Shop... Online!</h1></header>
     <div id="shop"></div>
     <footer><h1>Available worldwide... local to you.</h1><p><a href="mailto:kerrianneellis@gmail.com"/>Contact us</a></p></footer>
 <script src="shop.js"> </script>
